--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@ body {
 section {
   height: 100vh;
   overflow: hidden;
+  position: relative;
 }
 
 #canvasBck {
@@ -1035,6 +1036,16 @@ section {
 .showAsideMenu {
   -webkit-transform: translateX(100vw);
           transform: translateX(100vw);
+}
+
+#copywriter {
+  color: #E1E0DE;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 0;
+  font-size: 0.7rem;
+  opacity: 0.7;
 }
 
 #sphereMenu {
