--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,7 @@ body{
 section{
     height: 100vh;
     overflow: hidden;
+    position: relative;
 }
 //canvas
 #canvasBck{
@@ -462,6 +463,15 @@ section{
 }
 .showAsideMenu{
     transform: translateX(100vw);
+}
+#copywriter{
+    color: $first;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom: 0;
+    font-size: 0.7rem;
+    opacity: 0.7;
 }
 //right bottom menu 
 #sphereMenu{
