--- a/css/style.css
+++ b/css/style.css
@@ -1043,7 +1043,7 @@ section {
   position: absolute;
   width: 100%;
   text-align: center;
-  bottom: 0;
+  bottom: 0.5rem;
   font-size: 0.7rem;
   opacity: 0.7;
 }
